helm/01_apps-without-helm/red/red-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: red
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/ssl-redirect: "false"
    ingress.kubernetes.io/rewrite-target: "/"
spec:
  rules:
    - http:
        paths:
          - path: /red
            backend:
              serviceName: red
              servicePort: 80
